--- a/index.html
+++ b/index.html
@@ -1,7 +1,47 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Vincent's Testpage</h1>
-<p>Serves as a sandbox for websitebuilding.</p>
-</body>
+	<head>
+		<title>Vincent's Webpage</title>
+	</head>
+	
+	<body>
+	
+		<h1>Vincent's Testpage</h1>
+		
+		<p>
+			Serves as a sandbox for websitebuilding.
+		</p>
+		
+		
+		<p> 
+			This text is <strong> Bold </strong> <br>
+			This text is <em> Italic </em>
+		</p>
+		
+		<p>
+			<a href="https://www.google.com"> This </a> is a hyperlink to the web. <br>
+			<a href="otherpage"> This </a> will go to VincentPater.io/otherpage .
+		</p>
+		
+		<p>
+			This is a button: <button>Click me</button>
+		</p>
+		
+		<p>
+			Here is an unordered list:
+			<ul>
+				<li> First entry </li>
+				<li> Second entry </li>
+				<li> Third entry </li>
+			</ul>
+			
+			Here is an ordered list:
+			<ol>
+				<li> First entry </li>
+				<li> Second entry </li>
+				<li> Third entry </li>
+			</ol>
+			
+	</body>
+	
 </html>
