--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
 				<li> Third entry </li>
 			</ol>
 			
+		</p>
+	
+		<p>
+			<img src="https://avatars1.githubusercontent.com/u/44812950?s=400&v=4.jpg" alt="It's a me" height="600" width="600">
+		</p>
 	</body>
 	
 </html>
