--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	<link rel="stylesheet" type="text/css" href="mystyle.css">
+	
 		<title>Vincent's Webpage</title>
 	</head>
 	
@@ -12,21 +14,26 @@
 			Serves as a sandbox for websitebuilding.
 		</p>
 		
+		<h2>Text manipulation</h2>
 		
 		<p> 
 			This text is <strong> Bold </strong> <br>
 			This text is <em> Italic </em>
 		</p>
 		
+		<h2> Clickables </h2>
+		<h3> Hyperlinks </h3>
 		<p>
 			<a href="https://www.google.com"> This </a> is a hyperlink to the web. <br>
 			<a href="otherpage"> This </a> will go to VincentPater.io/otherpage .
 		</p>
 		
+		<h3> Button </h3>
 		<p>
 			This is a button: <button>Click me</button>
 		</p>
 		
+		<h2> Lists </h2>
 		<p>
 			Here is an unordered list:
 			<ul>
@@ -34,13 +41,15 @@
 				<li> Second entry </li>
 				<li> Third entry </li>
 			</ul>
-			
+		</p>
+		<p>
 			Here is an ordered list:
 			<ol>
 				<li> First entry </li>
 				<li> Second entry </li>
 				<li> Third entry </li>
 			</ol>
+		</p>
 			
 	</body>
 	
